# manager-clerk-customer-cashier

./: CMakeLists.txt  README.md  cashier.cpp  customer.cpp  main.cpp  manager.cpp  utils.cpp
include/: cashier.h  clerk.h  common.h  customer.h  manager.h  utils.h
src/: CMakeLists.txt  clerk.cpp  common.cpp
